test/kubernetes/e2e/features/route_options/testdata/bad-rto.yaml
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: bad-rto
spec:
  options:
    retries:
      retryOn: "5xx"
      retryBackOff:
        # We expect to receive an error when the base interval is less than max interval. 
        # ref projects/controller/pkg/plugins/basicroute/plugin.go
        baseInterval: "1s"
        maxInterval: "1ms"
