test/kubernetes/e2e/features/route_options/testdata/basic-rto-targetref.yaml
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: basic-rto-targetref
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: httproute1
  options:
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: foo
          value: basic-rto-targetref
