test/kubernetes/e2e/features/route_options/testdata/basic-rto.yaml
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: basic-rto
spec:
  options:
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: foo
          value: basic-rto
