test/kubernetes/e2e/features/route_options/testdata/merge.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 8080
  selector:
    app: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
      version: v1
  template:
    metadata:
      labels:
        app: httpbin
        version: v1
    spec:
      containers:
      - image: docker.io/kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        command:
        - gunicorn
        - -b
        - 0.0.0.0:8080
        - httpbin:app
        - -k
        - gevent
        env:
        # Tells pipenv to use a writable directory instead of $HOME
        - name: WORKON_HOME
          value: /tmp
        ports:
        - containerPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: example
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.solo.io
            kind: RouteOption
            name: extref
---
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: extref
spec:
  options:
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: x-foo
          value: extref
---
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: target-1
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example
  options:
    # will be ignored during merge due to extref having higher priority
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: x-foo
          value: target-1
    # will be merged as it is not in extref
    prefixRewrite: /anything/rewrite
---
apiVersion: gateway.solo.io/v1
kind: RouteOption
metadata:
  name: target-2
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: example
  options:
    # will be ignored during merge due to extref having higher priority
    headerManipulation:
      responseHeadersToAdd:
      - header:
          key: x-foo
          value: target-2
    hostRewrite: foo.com
